# diagnosisClaw

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  SYSTEM_CORE.md  pyproject.toml  ruff.toml
.claude/skills/rfc-specification/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.roo/commands/: init.md
.roo/rules/: directory-structure.mdc  memory-bank-instruction.mdc  rules.mdc  uv.mdc
.roo/rules-architect/: plan.mdc
.roo/rules-code/: implement.mdc
.sisyphus/drafts/: agent-framework-sdk-rfc.md  multi-turn-final-research-report.md  multi-turn-research-summary.md  rfc_006_architecture.md  skill-dynamic-loading.md
.sisyphus/notepads/: pydantic-ai-sdk.md
.sisyphus/notepads/multi-turn-conversation-support/: final-verification.md  learnings.md  verification.md
.sisyphus/notepads/pydantic-ai-integration/: issues.md  learnings.md
.sisyphus/notepads/pydantic-ai-sdk/: issues.md
.sisyphus/notepads/xeno_agent_pool_refactor/: learnings.md
.sisyphus/plans/: pydantic-ai-integration.md  xeno_agent_pool_refactor.md
docs/rfc/: ack-disk-monitor-design.md  阿里云ACK集群GPU监控工具开发指南.md
docs/rfcs/draft/: RFC-0002-unified-path-resolution.md
docs/superpowers/specs/: 2026-04-06-agent-orchestration-discussion-notes.md  2026-04-06-parent-mediated-followup-design.md
examples/: pydantic_ai_demo.py
src/iroot_llm/: __init__.py
src/iroot_llm/utils/: async_executor.py  io.py  logger.py  tqdm.py
